# db-script-agent

./: .coverage  .env  .env.example  .gitignore  README.md  alembic.ini  alembic_validation.db  app.db  pyproject.toml  requirements.txt  tmp_migration_check.db
app/: __init__.py  config.py  database.py  main.py
app/models/: db.py  schemas.py
app/routers/: generate.py  scripts.py
app/services/: dialect_service.py  llm_service.py  risk_checker.py  sql_generator.py
app/templates/: base.html  index.html  script_detail.html  scripts.html
tests/: conftest.py  test_api.py  test_dialect_service.py  test_risk_checker.py
