[project]
name = "db-script-agent"
version = "0.1.0"
description = "Database script generation agent for internal teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "alembic>=1.13.0",
  "cryptography>=42.0.0",
  "pymysql>=1.1.0",
  "psycopg[binary]>=3.1.19",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
dbsa-sign-request = "app.auth_client:main"
dbsa-call-api = "app.api_client:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
